--- a/FURFACTOR/assets/css/style.css
+++ b/FURFACTOR/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #000000;
 }
 
 h1 {
@@ -10,6 +11,31 @@ h1 {
     font-weight: bold;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+    position: absolute;
+}
+
+a.link-top {
+    top: 2%;
+    left: 50%;
+}
+
+a.link-bottom {
+    bottom: 2%;
+    left: 50%;
+}
+
+a.link-left {
+    top: 50%;
+    left: 2%;
+}
+
+a.link-right {
+    top: 50%;
+    right: 2%;
+}
 p {
     padding: 10px 10px 10px 10px;
 }
